implement collaboration logic, guest with names, lock for mesh while editing, connected users display, create websockets server for displatch changes

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -11,5 +11,10 @@
     "position": "Position",
     "scale": "Scale",
     "rotation": "Rotation"
+  },
+  "online": {
+    "warnings": {
+      "editedMesh": "This mesh is currently being edited by another user"
+    }
   }
 }
